--- a/package.json
+++ b/package.json
@@ -3,11 +3,26 @@
   "version": "0.0.1",
   "description": "test",
   "main": "app.js",
-  "scripts": {
-    "dev": "node_dev gulp"
-  },
   "devDependencies": {
+    "css-loader": "^0.25.0",
+    "extract-text-webpack-plugin": "^1.0.1",
     "gulp": "^3.9.1",
+    "gulp-clean": "^0.3.2",
+    "gulp-htmlmin": "^2.0.0",
+    "gulp-replace": "^0.5.4",
+    "gulp-uglify": "^2.0.0",
+    "gulp-util": "^3.0.7",
+    "html-webpack-plugin": "^2.22.0",
+    "koa": "^1.2.4",
+    "koa-proxy": "^0.6.0",
+    "koa-router": "^5.4.0",
+    "koa-static": "^2.0.0",
+    "koa-webpack-dev-middleware": "^1.2.2",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.2"
+  },
+  "scripts": {
+    "dev": "node app",
+    "build": "gulp"
   }
 }
